--- a/templates/base.html
+++ b/templates/base.html
@@ -118,5 +118,7 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+    ...
+    {% block scripts %}{% endblock %}
 </body>
 </html>
